# smd-resistor-decoder

./: .gitignore  LICENSE  README.md  pyproject.toml  smdresistor-gui.spec
.github/workflows/: build.yml  ci.yml
src/smdresistor/: __init__.py  cli.py  decoder.py  gui.py
tests/: test_decoder.py
