[project]
name = "smd-resistor-decoder"
version = "0.1.0"
description = "Convert SMD resistor digit codes to real values (CLI + GUI)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Miguel", email = "" }
]
license = { text = "MIT" }
keywords = ["smd", "resistor", "decoder", "eia-96", "electronics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.scripts]
smdresistor = "smdresistor.cli:main"
smdresistor-gui = "smdresistor.gui:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

